@@ -1,3 +1,8 @@
+TAG: strainload-6-0-12-2
+DATE: 03/14/2018
+STAFF: lec
+CHANGES: TR12332/IMSR/Strains
+
 TAG: strainload-6-0-12-1
 DATE: 03/07/2018
 STAFF: lec
